opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async_rpc_kernel"
bug-reports: "https://github.com/janestreet/async_rpc_kernel/issues"
dev-repo: "https://github.com/janestreet/async_rpc_kernel.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "async_rpc_kernel" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async_kernel"
  "core_kernel"
  "jbuilder"                {build}
  "ppx_driver"
  "ppx_jane"
  "ocaml-migrate-parsetree"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Platform-independent core of Async RPC library

Part of Jane Street\226\128\153s Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"
