(library
 (name async_rpc_kernel_test)
 (preprocess
  (pps ppx_jane))
 (libraries async async.async_rpc async_rpc_kernel bin_prot.shape
   core_kernel.bus core async_kernel.eager_deferred expect_test_helpers_async
   expect_test_helpers_core patdiff.expect_test_patdiff
   ocaml-compiler-libs.common pipe_with_writer_error vec
   core_kernel.weak_pointer))
